--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -127,6 +127,9 @@
   <data name="icons8-filled-bookmark-ribbon-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\icons8-filled-bookmark-ribbon-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icons8-red-card-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\icons8-red-card-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icons8-star-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\icons8-star-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -142,16 +145,16 @@
   <data name="icons8-filter-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\icons8-filter-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="icons8-sparkling-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\images\icons8-sparkling-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icons8-constellation-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\icons8-constellation-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="icons8-plus-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\icons8-plus-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="icons8-constellation-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\images\icons8-constellation-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icons8-sparkling-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\icons8-sparkling-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="icons8-red-card-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\images\icons8-red-card-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icons8-calculator-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\icons8-calculator-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
