--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -118,29 +118,29 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="icons8-calculator-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\icons8-calculator-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icons8-favorite-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\icons8-favorite-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="icons8-question-mark-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\images\icons8-question-mark-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="icons8-filled-bookmark-ribbon-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\images\icons8-filled-bookmark-ribbon-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="icons8-red-card-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\images\icons8-red-card-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="icons8-star-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\icons8-star-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="icons8-edit-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\images\icons8-edit-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icons8-red-card-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\icons8-red-card-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="icons8-info-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\images\icons8-info-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icons8-filled-bookmark-ribbon-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\icons8-filled-bookmark-ribbon-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icons8-sparkling-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\icons8-sparkling-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="icons8-search-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\icons8-search-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icons8-info-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\icons8-info-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="icons8-filter-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\icons8-filter-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -151,10 +151,16 @@
   <data name="icons8-plus-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\icons8-plus-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="icons8-sparkling-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\images\icons8-sparkling-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icons8-question-mark-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\icons8-question-mark-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="icons8-calculator-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\images\icons8-calculator-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icons8-edit-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\icons8-edit-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icons8-add-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\icons8-add-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icons8-remove-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\icons8-remove-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
